some refactoring and moving code around.

--- a/src/product-api/Product.Application.Command.UnitTests/Product.Application.Command.UnitTests.csproj
+++ b/src/product-api/Product.Application.Command.UnitTests/Product.Application.Command.UnitTests.csproj
@@ -2,7 +2,6 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
-
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
@@ -21,7 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Product.Application\Product.Application.csproj" />
+    <ProjectReference Include="..\Product.Application.Command\Product.Application.Command.csproj" />
   </ItemGroup>
 
 </Project>
