--- a/src/product-api/Product.Application.Event/Product.Application.Event.csproj
+++ b/src/product-api/Product.Application.Event/Product.Application.Event.csproj
@@ -6,16 +6,21 @@
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <Nullable>warnings</Nullable>
   </PropertyGroup>
-
+    
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="10.1.1" />
+    <PackageReference Include="MediatR" Version="9.0.0" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
   </ItemGroup>
-
+    
   <ItemGroup>
-    <ProjectReference Include="..\Product.Application.Command\Product.Application.Command.csproj" />
+    <ProjectReference Include="..\Product.Models\Product.Models.csproj" />
   </ItemGroup>
 
 </Project>
