--- a/src/product-api/Product.API/Product.API.csproj
+++ b/src/product-api/Product.API/Product.API.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Product.Application\Product.Application.csproj" />
+    <ProjectReference Include="..\Product.Infrastructure.Database.MongoDB\Product.Infrastructure.Database.MongoDB.csproj" />
   </ItemGroup>
 
 </Project>
