implementation mongo database integration.

--- a/src/product-api/Product.API/appsettings.json
+++ b/src/product-api/Product.API/appsettings.json
@@ -1,11 +1,15 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information",
-      "Product": "Trace"
-    }
-  },
-  "AllowedHosts": "*"
+    "ProductDatabaseSettings": {
+        "ConnectionString": "mongodb://localhost:27017",
+        "DatabaseName": "market-product"
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft": "Warning",
+            "Microsoft.Hosting.Lifetime": "Information",
+            "Product": "Trace"
+        }
+    },
+    "AllowedHosts": "*"
 }
