--- a/src/product-api/Product.Application.Query/Product.Application.Query.csproj
+++ b/src/product-api/Product.Application.Query/Product.Application.Query.csproj
@@ -6,17 +6,19 @@
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <Nullable>warnings</Nullable>
   </PropertyGroup>
-    
+
   <ItemGroup>
-    <PackageReference Include="AutoMapper" Version="10.1.1" />
+    <PackageReference Include="MediatR" Version="9.0.0" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
   </ItemGroup>
-    
+
   <ItemGroup>
-    <ProjectReference Include="..\Product.Application.Event\Product.Application.Event.csproj" />
     <ProjectReference Include="..\Product.Infrastructure.Database.Abstractions\Product.Infrastructure.Database.Abstractions.csproj" />
   </ItemGroup>
 
