--- a/src/product-api/Product.Application.Query/Product.Application.Query.csproj
+++ b/src/product-api/Product.Application.Query/Product.Application.Query.csproj
@@ -22,4 +22,8 @@
     <ProjectReference Include="..\Product.Infrastructure.Database.Abstractions\Product.Infrastructure.Database.Abstractions.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Handlers\" />
+  </ItemGroup>
+
 </Project>
