implementing event store data store in mongodb, work in progress.

--- a/src/product-api/Product.Infrastructure.EventStore.MongoDB/Product.Infrastructure.EventStore.MongoDB.csproj
+++ b/src/product-api/Product.Infrastructure.EventStore.MongoDB/Product.Infrastructure.EventStore.MongoDB.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Product.Application.Event\Product.Application.Event.csproj" />
+    <ProjectReference Include="..\Product.Infrastructure.EventStore.Abstractions\Product.Infrastructure.EventStore.Abstractions.csproj" />
   </ItemGroup>
 
 </Project>
