storing events into database. still working on how to calculate differences from model objects.

--- a/src/product-api/Product.Infrastructure.EventStore.Abstractions/Product.Infrastructure.EventStore.Abstractions.csproj
+++ b/src/product-api/Product.Infrastructure.EventStore.Abstractions/Product.Infrastructure.EventStore.Abstractions.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Product.Application.Event\Product.Application.Event.csproj" />
+    <ProjectReference Include="..\Product.Models\Product.Models.csproj" />
   </ItemGroup>
 
 </Project>
