--- a/src/product-api/Product.Application.Event/Product.Application.Event.csproj
+++ b/src/product-api/Product.Application.Event/Product.Application.Event.csproj
@@ -9,6 +9,7 @@
     
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="10.1.1" />
+    <PackageReference Include="JsonDiffPatch.Net" Version="2.3.0" />
     <PackageReference Include="MediatR" Version="9.0.0" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0" />
@@ -20,6 +21,7 @@
   </ItemGroup>
     
   <ItemGroup>
+    <ProjectReference Include="..\Product.Infrastructure.EventStore.Abstractions\Product.Infrastructure.EventStore.Abstractions.csproj" />
     <ProjectReference Include="..\Product.Models\Product.Models.csproj" />
   </ItemGroup>
 
