--- a/src/product-api/Product.Infrastructure.Database.MongoDB/Product.Infrastructure.Database.MongoDB.csproj
+++ b/src/product-api/Product.Infrastructure.Database.MongoDB/Product.Infrastructure.Database.MongoDB.csproj
@@ -20,6 +20,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Product.Infrastructure.Database.Abstractions\Product.Infrastructure.Database.Abstractions.csproj" />
+    <ProjectReference Include="..\Product.Infrastructure.EventStore.Abstractions\Product.Infrastructure.EventStore.Abstractions.csproj" />
   </ItemGroup>
 
 </Project>
