refactoring some code around. trying to detach the integration tests from the code

--- a/src/Product.IntegrationTests/Product.IntegrationTests.csproj
+++ b/src/Product.IntegrationTests/Product.IntegrationTests.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Bogus" Version="33.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="5.0.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="5.0.6" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.7.1" />
@@ -22,8 +23,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Product.API\Product.API.csproj" />
-    <ProjectReference Include="..\Product.Infrastructure.Database.EntityFramework\Product.Infrastructure.Database.EntityFramework.csproj" />
+    <ProjectReference Include="..\Product\Product.API\Product.API.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
