--- a/docker-compose-integration.yml
+++ b/docker-compose-integration.yml
@@ -11,8 +11,8 @@ services:
     environment:
       - ProductDatabaseSettings__ConnectionString=mongodb://mongodb:27017
     volumes:
-      - .:/src
-    working_dir: /src/src/Product.IntegrationTests
+      - ./src:/src
+    working_dir: /src/Product.IntegrationTests
     command:
       [
         "dotnet",
