--- a/src/Product/Product.API.IntegrationTests/Product.API.IntegrationTests.csproj
+++ b/src/Product/Product.API.IntegrationTests/Product.API.IntegrationTests.csproj
@@ -33,7 +33,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Product\Product.API\Product.API.csproj" />
+    <ProjectReference Include="..\Product.API\Product.API.csproj" />
   </ItemGroup>
 
 </Project>
