--- a/src/Stock.API/Stock.Application/Stock.Application.csproj
+++ b/src/Stock.API/Stock.Application/Stock.Application.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="10.1.1" />
+    <PackageReference Include="FluentResults" Version="2.5.0" />
     <PackageReference Include="FluentValidation" Version="10.0.3" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
       <PrivateAssets>all</PrivateAssets>
