--- a/src/Stock.API/Stock.API.IntegrationTests/Stock.API.IntegrationTests.csproj
+++ b/src/Stock.API/Stock.API.IntegrationTests/Stock.API.IntegrationTests.csproj
@@ -17,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Bogus" Version="33.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="5.0.6" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.7.1" />
     <PackageReference Include="xunit" Version="2.4.1" />
