--- a/src/Stock.API/Stock.API.IntegrationTests/appsettings.json
+++ b/src/Stock.API/Stock.API.IntegrationTests/appsettings.json
@@ -1,19 +1,18 @@
 ﻿{
-  "StockDatabaseSettings": {
-    "ConnectionString": "mongodb://localhost:27017",
-    "DatabaseName": "market-stock-integration-tests"
-  },
-  "ProductApi": {
-    "BaseUrl": "http://localhost:1234/",
-    "ProductV1": "/v1/product"
-  },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information",
-      "Product": "Trace"
-    }
-  },
-  "AllowedHosts": "*"
+    "StockDatabaseSettings": {
+        "ConnectionString": "mongodb://localhost:27017",
+        "DatabaseName": "market-stock-integration-tests"
+    },
+    "ProductServiceSettings": {
+        "BaseUrl": "https://localhost:1234/"
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft": "Warning",
+            "Microsoft.Hosting.Lifetime": "Information",
+            "Product": "Trace"
+        }
+    },
+    "AllowedHosts": "*"
 }
