--- a/src/Stock.API/Stock.API.IntegrationTests/appsettings.json
+++ b/src/Stock.API/Stock.API.IntegrationTests/appsettings.json
@@ -4,7 +4,7 @@
         "DatabaseName": "market-stock-integration-tests"
     },
     "ProductServiceSettings": {
-        "BaseUrl": "https://localhost:1234/"
+        "BaseUrl": "http://localhost/"
     },
     "Logging": {
         "LogLevel": {
