adding stock model and database infrastrucure projects.

--- a/src/Stock.API/Stock.Application/Stock.Application.csproj
+++ b/src/Stock.API/Stock.Application/Stock.Application.csproj
@@ -19,5 +19,9 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Stock.Infrastructure.Database.Abstractions\Stock.Infrastructure.Database.Abstractions.csproj" />
+  </ItemGroup>
   
 </Project>
