add stock events.

--- a/src/Stock.API/Stock.API/Stock.API.csproj
+++ b/src/Stock.API/Stock.API/Stock.API.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Stock.Application\Stock.Application.csproj" />
+    <ProjectReference Include="..\Stock.Infrastructure.Database.MongoDb\Stock.Infrastructure.Database.MongoDb.csproj" />
   </ItemGroup>
 
 </Project>
