--- a/src/Stock.API/Stock.API/appsettings.json
+++ b/src/Stock.API/Stock.API/appsettings.json
@@ -11,7 +11,7 @@
             "Default": "Information",
             "Microsoft": "Warning",
             "Microsoft.Hosting.Lifetime": "Information",
-            "Product": "Trace"
+            "Stock": "Trace"
         }
     },
     "AllowedHosts": "*"
