--- a/.github/workflows/product-api.yml
+++ b/.github/workflows/product-api.yml
@@ -26,5 +26,4 @@ jobs:
     - name: Unit Tests
       run: dotnet test --no-build --verbosity normal --filter UnitTests
     - name: Execute integration tests
-      # working-directory: ./src
-      run: docker-compose --file docker-compose-integration.yml up --exit-code-from integration-tests
+      run: docker-compose --file docker-compose-integration.yml up --exit-code-from product-integration-tests
