--- a/.github/workflows/stock-api.yml
+++ b/.github/workflows/stock-api.yml
@@ -25,5 +25,5 @@ jobs:
       run: dotnet build --no-restore
     - name: Unit Tests
       run: dotnet test --no-build --verbosity normal --filter UnitTests
-    # - name: Execute integration tests
-      # run: docker-compose --file docker-compose-integration.yml up --exit-code-from integration-tests
+    - name: Execute integration tests
+      run: docker-compose --file docker-compose-integration.yml up --exit-code-from stock-integration-tests
